Modal updated, alignment issues fixed, much more centralised!

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     background-color: white;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     color: #092B54;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h2 {
@@ -11,8 +15,13 @@ h2 {
 
 #start {
     max-width: 50em;
+    
+    position: relative;
+    margin: 0 auto;
+    
     display: flex;
     align-items: center;
+    
     justify-content: space-between;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 1.5em;
@@ -47,7 +56,7 @@ h2 {
     border: 2px solid black;
     border-radius: 0.25em;
 
-    position: absolute;
+    position: relative;
 
 }
 
@@ -117,7 +126,7 @@ h2 {
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+    background-color: rgba(25,38,83,0.7); /* Black w/ opacity */
   }
   /* Modal Content/Box */
 .victory-content {
